--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
       href="https://unpkg.com/bpmn-js-properties-panel/dist/assets/properties-panel.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bpmn-js-properties-panel/dist/assets/element-templates.css"
+    />
   </head>
   <body>
     <app-root></app-root>
